[gd_scene load_steps=11 format=3 uid="uid://bys1xx4wxs0be"]

[ext_resource type="Script" path="res://Scripts/enemy_spit.gd" id="1_37a4l"]
[ext_resource type="Texture2D" uid="uid://cau8qgu0b6syf" path="res://Game assets for demo/Boxer_spit-Sheet.png" id="2_44fac"]

[sub_resource type="Curve" id="Curve_gmf4i"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.083871, 0.538461), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tntsh"]
size = Vector2(42, 18.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb7cw"]
atlas = ExtResource("2_44fac")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwiox"]
atlas = ExtResource("2_44fac")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhcjl"]
atlas = ExtResource("2_44fac")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yho4"]
atlas = ExtResource("2_44fac")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiwig"]
atlas = ExtResource("2_44fac")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ul8q8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb7cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwiox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhcjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yho4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiwig")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Area2D" type="Area2D" groups=["EnemyProjectile"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_37a4l")
curve = SubResource("Curve_gmf4i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_tntsh")
metadata/_edit_lock_ = true

[node name="SpitEffect" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ul8q8")
frame_progress = 0.302536
metadata/_edit_lock_ = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]

[node name="Timer_expire" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_expire" to="." method="_on_timer_expire_timeout"]
